@@ -280,7 +280,7 @@ class FrontendForm(RsyslogQueueForm, ModelForm):
                            "extrahop_host", "extrahop_id", "extrahop_secret",
                            "hornetsecurity_app_id", "hornetsecurity_token",
                            "ubika_base_refresh_token", "ubika_namespaces",
-                            "sentinel_one_identity_graph_token", "sentinel_one_identity_graph_console_url",
+                            "sentinel_one_graph_token", "sentinel_one_graph_console_url",
                            ]:
             self.fields[field_name].required = False
 
@@ -408,7 +408,7 @@ class FrontendForm(RsyslogQueueForm, ModelForm):
                   "extrahop_host", "extrahop_id", "extrahop_secret",
                   "hornetsecurity_app_id", "hornetsecurity_token",
                   "ubika_base_refresh_token", "ubika_namespaces",
-                  "sentinel_one_identity_graph_token", "sentinel_one_identity_graph_console_url",
+                  "sentinel_one_graph_token", "sentinel_one_graph_console_url",
         ] + RsyslogQueueForm.Meta.fields
 
         widgets = {
@@ -645,8 +645,8 @@ class FrontendForm(RsyslogQueueForm, ModelForm):
             'hornetsecurity_token': TextInput(attrs={'type': 'password', 'class': 'form-control'}),
             'ubika_base_refresh_token': TextInput(attrs={'type': 'password', 'class': 'form-control'}),
             'ubika_namespaces': TextInput(attrs={'class': 'form-control', 'data-role': "tagsinput"}),
-            'sentinel_one_identity_graph_token': TextInput(attrs={'type': 'password', 'class': 'form-control'}),
-            'sentinel_one_identity_graph_console_url': TextInput(attrs={'class': 'form-control'}),
+            'sentinel_one_graph_token': TextInput(attrs={'type': 'password', 'class': 'form-control'}),
+            'sentinel_one_graph_console_url': TextInput(attrs={'class': 'form-control'}),
         } | RsyslogQueueForm.Meta.widgets
 
     def clean_name(self):
