@@ -1,0 +1,46 @@
+# Generated by Django 4.2.23 on 2025-07-25 08:56
+
+from django.db import migrations
+
+# Forward change function
+def update_sentinel_one_identity_graph_api_collectors(apps, schema_editor):
+    frontend_model = apps.get_model("services", "frontend")
+    db_alias = schema_editor.connection.alias
+    frontends = frontend_model.objects.using(db_alias)
+
+    for frontend in frontends.filter(api_parser_type="sentinel_one_identity_graph"):
+        frontend.api_parser_type = "sentinel_one_graph"
+        frontend.save(update_fields=['api_parser_type'])
+
+# Backward change function
+def rev_update_sentinel_one_identity_graph_api_collectors(apps, schema_editor):
+    frontend_model = apps.get_model("services", "frontend")
+    db_alias = schema_editor.connection.alias
+    frontends = frontend_model.objects.using(db_alias)
+
+    for frontend in frontends.filter(api_parser_type="sentinel_one_graph"):
+        frontend.api_parser_type = "sentinel_one_identity_graph"
+        frontend.save(update_fields=['api_parser_type'])
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('services', '0087_frontend_add_defaults'),
+    ]
+
+    operations = [
+        migrations.RenameField(
+            model_name='frontend',
+            old_name='sentinel_one_identity_graph_console_url',
+            new_name='sentinel_one_graph_console_url',
+        ),
+        migrations.RenameField(
+            model_name='frontend',
+            old_name='sentinel_one_identity_graph_token',
+            new_name='sentinel_one_graph_token',
+        ),
+        migrations.RunPython(
+            update_sentinel_one_identity_graph_api_collectors,
+            rev_update_sentinel_one_identity_graph_api_collectors),
+    ]
