@@ -2517,19 +2517,19 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-md-12 api_clients_row" id="api_sentinel_one_identity_graph_row">
+                      <div class="col-md-12 api_clients_row" id="api_sentinel_one_graph_row">
                         <div class="form-group">
-                          <label class="col-sm-3 control-label">{{ form.sentinel_one_identity_graph_token.label }}</label>
+                          <label class="col-sm-3 control-label">{{ form.sentinel_one_graph_token.label }}</label>
                           <div class="col-sm-5">
-                            {{ form.sentinel_one_identity_graph_token }}
-                            {{ form.sentinel_one_identity_graph_token.errors|safe }}
+                            {{ form.sentinel_one_graph_token }}
+                            {{ form.sentinel_one_graph_token.errors|safe }}
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-sm-3 control-label">{{ form.sentinel_one_identity_graph_console_url.label }}</label>
+                          <label class="col-sm-3 control-label">{{ form.sentinel_one_graph_console_url.label }}</label>
                           <div class="col-sm-5">
-                            {{ form.sentinel_one_identity_graph_console_url }}
-                            {{ form.sentinel_one_identity_graph_console_url.errors|safe }}
+                            {{ form.sentinel_one_graph_console_url }}
+                            {{ form.sentinel_one_graph_console_url.errors|safe }}
                           </div>
                         </div>
                       </div>
