@@ -84,7 +84,7 @@ from toolkit.api_parser.perception_point_x_ray.perception_point_x_ray import Per
 from toolkit.api_parser.extrahop.extrahop import ExtrahopParser
 from toolkit.api_parser.hornetsecurity.hornetsecurity import HornetSecurityParser
 from toolkit.api_parser.ubika.ubika import UbikaParser
-from toolkit.api_parser.sentinel_one_identity_graph.sentinel_one_identity_graph import SentinelOneIdentityGraphParser
+from toolkit.api_parser.sentinel_one_graph.sentinel_one_graph import SentinelOneGraphParser
 
 logging.config.dictConfig(settings.LOG_SETTINGS)
 logger = logging.getLogger('gui')
@@ -149,7 +149,7 @@ PARSER_LIST = {
     "extrahop": ExtrahopParser,
     "hornetsecurity": HornetSecurityParser,
     "ubika": UbikaParser,
-    "sentinel_one_identity_graph": SentinelOneIdentityGraphParser,
+    "sentinel_one_graph": SentinelOneGraphParser,
 }
 
 class ParserDoesNotExist(Exception):
